--- a/.github/workflows/docker-image-latest.yml
+++ b/.github/workflows/docker-image-latest.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
     paths:
       - 'dockerfile'
-      - 'download_dotnet.sh
+      - 'download_dotnet.sh'
       - 'download_server.sh'
       - 'entrypoint.sh'
       - '.github/workflows/docker-image-latest.yml'
@@ -13,7 +13,7 @@ on:
     branches: [ "main" ]
     paths:
       - 'dockerfile'
-      - 'download_dotnet.sh
+      - 'download_dotnet.sh'
       - 'download_server.sh'
       - 'entrypoint.sh'
       - '.github/workflows/docker-image-latest.yml'
