--- a/.github/workflows/push-image-docker-io.yml
+++ b/.github/workflows/push-image-docker-io.yml
@@ -7,14 +7,14 @@ on:
       - 'dockerfile'
       - 'src/**'
       - 'entrypoint.sh'
-      - '.github/workflows/docker-image-latest.yml'
+      - '.github/workflows/push-image-docker-io.yml'
   pull_request:
     branches: [ "main" ]
     paths:
       - 'dockerfile'
       - 'src/**'
       - 'entrypoint.sh'
-      - '.github/workflows/docker-image-latest.yml'
+      - '.github/workflows/push-image-docker-io.yml'
 
 env:
   PLATAFORM_ARCH: linux/amd64
@@ -26,28 +26,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v4
       
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
           platforms: ${{ env.PLATAFORM_ARCH }}
                 
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
